--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "start-dev": "ENV=DEV node index.js"
   },
   "author": "",
@@ -22,6 +22,6 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.2",
     "morgan": "~1.9.0",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.22"
   }
 }
